// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`отобразит ошибку у заблокированного на Авито объявления 1`] = `
<div
  className="OfferSnippetMultiposting__errorList"
>
  <HoveredTooltip
    className="OfferSnippetMultiposting__errorTooltip"
    defaultPadding={true}
    directions={
      Array [
        "top-center",
        "bottom-center",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="Это объявление заблокировано на Авито.
                        За дополнительной информацией обратитесь к своему региональному представителю Авто.ру"
  >
    <div
      className="OfferSnippetMultiposting__error"
    >
      <span
        className="OfferSnippetMultiposting__errorCaption"
      >
        Авито
      </span>
       — 
      объявление заблокировано
    </div>
  </HoveredTooltip>
</div>
`;

exports[`отобразит ошибку у заблокированного по нескольким причинам на Авто.ру объявления 1`] = `
<div
  className="OfferSnippetMultiposting__errorList"
>
  <HoveredTooltip
    className="OfferSnippetMultiposting__errorTooltip"
    defaultPadding={true}
    directions={
      Array [
        "top-center",
        "bottom-center",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="Объявление в процессе активации на Авто.ру. Совсем скоро его можно будет увидеть на сайте."
  >
    <div
      className="OfferSnippetMultiposting__error"
    >
      <span
        className="OfferSnippetMultiposting__errorCaption"
      >
        Авто.ру
      </span>
       — 
      ожидает активации
    </div>
  </HoveredTooltip>
</div>
`;

exports[`отобразит ошибку у заблокированного по одной причине на Авто.ру объявления 1`] = `
<div
  className="OfferSnippetMultiposting__errorList"
>
  <HoveredTooltip
    className="OfferSnippetMultiposting__errorTooltip"
    defaultPadding={true}
    directions={
      Array [
        "top-center",
        "bottom-center",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="Объявление в процессе активации на Авто.ру. Совсем скоро его можно будет увидеть на сайте."
  >
    <div
      className="OfferSnippetMultiposting__error"
    >
      <span
        className="OfferSnippetMultiposting__errorCaption"
      >
        Авто.ру
      </span>
       — 
      ожидает активации
    </div>
  </HoveredTooltip>
</div>
`;

exports[`отобразит ошибку у неактивированного на Авто.ру объявления 1`] = `
<div
  className="OfferSnippetMultiposting__errorList"
>
  <HoveredTooltip
    className="OfferSnippetMultiposting__errorTooltip"
    defaultPadding={true}
    directions={
      Array [
        "top-center",
        "bottom-center",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="Объявление в процессе активации на Авто.ру. Совсем скоро его можно будет увидеть на сайте."
  >
    <div
      className="OfferSnippetMultiposting__error"
    >
      <span
        className="OfferSnippetMultiposting__errorCaption"
      >
        Авто.ру
      </span>
       — 
      ожидает активации
    </div>
  </HoveredTooltip>
</div>
`;

exports[`отобразит ошибку у неоплаченного на Авто.ру объявления 1`] = `
<div
  className="OfferSnippetMultiposting__errorList"
>
  <HoveredTooltip
    className="OfferSnippetMultiposting__errorTooltip"
    defaultPadding={true}
    directions={
      Array [
        "top-center",
        "bottom-center",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="На вашем счету недостаточно средств для размещения этого объявления.
                        Пользователи не смогут увидеть его на Авто.ру, пока вы не пополните баланс.
                        Объявление продолжит показываться на других классифайдах при наличии необходимой суммы на их счетах"
  >
    <div
      className="OfferSnippetMultiposting__error"
    >
      <span
        className="OfferSnippetMultiposting__errorCaption"
      >
        Авто.ру
      </span>
       — 
      недостаточно средств для размещения
    </div>
  </HoveredTooltip>
</div>
`;

exports[`отобразит ошибку у объявления с расхождением пробега 1`] = `
<div
  className="OfferSnippetMultiposting__errorList"
>
  <HoveredTooltip
    className="OfferSnippetMultiposting__errorTooltip"
    defaultPadding={true}
    directions={
      Array [
        "top-center",
        "bottom-center",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="По данным сервиса ПроАвто пробег этого автомобиля мог быть скручен.
                        Если вы считаете, что это ошибка, обратитесь к своему региональному представителю Авто.ру или купите отчёт."
  >
    <div
      className="OfferSnippetMultiposting__error"
    >
      <span
        className="OfferSnippetMultiposting__errorCaption"
      >
        ПроАвто
      </span>
       — 
      расхождение пробега
    </div>
  </HoveredTooltip>
</div>
`;
